<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="8dp"
    tools:context=".views.SortDialogFragment">
    <TextView
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort"
        style="@style/TextView.Headline6.Black"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/sortingTV"/>
    <RadioGroup
        android:id="@+id/sortRG"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/sortingTV"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_highest_to_lowest"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_lowest_to_highest"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_latest_to_oldest"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_oldest_to_latest"/>
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>