<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    tools:context=".views.FilterDialogFragment">
    <TextView
        android:id="@+id/filterTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:text="Filter"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/TextView.Headline6.Black"/>
    <RadioGroup
        android:id="@+id/filterRG"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filterTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/marketRB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/market"
            />
        <RadioButton
            android:id="@+id/districtRB"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/district"/>

    </RadioGroup>
    <EditText
        android:id="@+id/filterET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter text"
        app:layout_constraintTop_toBottomOf="@id/filterRG"
        />
    <Button
        android:id="@+id/filterBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"
        android:text="@string/filter"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/filterET"/>

</androidx.constraintlayout.widget.ConstraintLayout>